--- a/META.yml
+++ b/META.yml
@@ -7,7 +7,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300028, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Dist::Zilla version 5.008, CPAN::Meta::Converter version 2.133380'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -15,7 +15,9 @@ meta-spec:
 name: Shell-Guess
 requires:
   File::Spec: 0
+  perl: 5.006
 resources:
-  bugtracker: https://github.com/plicease/Shell-Guess/issues
-  repository: git://github.com/plicease/Shell-Guess.git
-version: 0.01
+  bugtracker: https://github.com/plicease/shell-guess/issues
+  homepage: http://perl.wdlabs.com/Shell-Guess/
+  repository: git://github.com/plicease/shell-guess.git
+version: 0.02
