--- a/dist.ini
+++ b/dist.ini
@@ -4,23 +4,11 @@ license = Perl_5
 copyright_holder = Graham Ollis
 copyright_year   = 2012
 
-version = 0.01
+version = 0.02
 
-[@Filter]
--bundle = @Author::Plicease
--remove = MakeMaker
-
-[ReadmeAnyFromPod]
-type     = text
-filename = README
-location = build
-
-[ReadmeAnyFromPod / ReadMePodInRoot]
-type     = pod
-filename = README.pod
-location = root
-
-[Author::Plicease::Tests]
+[@Author::Plicease]
+release_tests = 1
+travis_status = 1
 
 [RemovePrereqs]
 remove = strict
@@ -28,5 +16,8 @@ remove = warnings
 remove = Unix::Process
 remove = Win32::Process::Info
 remove = Win32::Process::List
+remote = File::Spec
 
-[MakeMaker::Custom]
+[=inc::MakeMaker]
+
+[Author::Plicease::Upload]
