--- a/dist.ini
+++ b/dist.ini
@@ -4,20 +4,31 @@ license = Perl_5
 copyright_holder = Graham Ollis
 copyright_year   = 2012
 
-version = 0.02
+version = 0.02_01
 
 [@Author::Plicease]
 release_tests = 1
 travis_status = 1
 
 [RemovePrereqs]
+
+; comes with Perl
 remove = strict
 remove = warnings
+remove = lib
+remote = File::Spec
+remove = FindBin
+
+; optional
 remove = Unix::Process
 remove = Win32::Process::Info
 remove = Win32::Process::List
-remote = File::Spec
 
-[=inc::MakeMaker]
+; part of the testlib
+remove = FakeLogin
 
 [Author::Plicease::Upload]
+
+[Author::Plicease::Thanks]
+current = Graham Ollis <plicease@cpan.org>
+contributor = Buddy Burden (BAREFOOT)
