--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = Graham Ollis
 copyright_year   = 2012
 
-version = 0.02_01
+version = 0.02_02
 
 [@Author::Plicease]
 release_tests = 1
@@ -32,3 +32,5 @@ remove = FakeLogin
 [Author::Plicease::Thanks]
 current = Graham Ollis <plicease@cpan.org>
 contributor = Buddy Burden (BAREFOOT)
+
+[=inc::DynamicConfig]
