--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = Graham Ollis
 copyright_year   = 2012
 
-version = 0.02_02
+version = 0.02_03
 
 [@Author::Plicease]
 release_tests = 1
@@ -16,7 +16,7 @@ travis_status = 1
 remove = strict
 remove = warnings
 remove = lib
-remote = File::Spec
+remove = File::Spec
 remove = FindBin
 
 ; optional
