Import of PLICEASE/Shell-Guess-0.03 from CPAN.
gitpan-cpan-distribution: Shell-Guess
gitpan-cpan-version:      0.03
gitpan-cpan-path:         PLICEASE/Shell-Guess-0.03.tar.gz
gitpan-cpan-author:       PLICEASE
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -20,4 +20,4 @@ resources:
   bugtracker: https://github.com/plicease/shell-guess/issues
   homepage: http://perl.wdlabs.com/Shell-Guess/
   repository: git://github.com/plicease/shell-guess.git
-version: 0.02_03
+version: '0.03'
