--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = Graham Ollis
 copyright_year   = 2012
 
-version = 0.02_03
+version = 0.03
 
 [@Author::Plicease]
 release_tests = 1
