--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = Graham Ollis
 copyright_year   = 2012
 
-version = 0.03
+version = 0.04
 
 [@Author::Plicease]
 release_tests = 1
@@ -33,4 +33,4 @@ remove = FakeLogin
 current = Graham Ollis <plicease@cpan.org>
 contributor = Buddy Burden (BAREFOOT)
 
-[=inc::DynamicConfig]
+[Meta::Dynamic::Config]
