--- a/META.yml
+++ b/META.yml
@@ -4,7 +4,7 @@ author:
   - 'Graham Ollis <plicease@cpan.org>'
 build_requires:
   Module::Build: '0.3601'
-  Test::More: '0'
+  Test::More: '0.94'
 configure_requires:
   Module::Build: '0.3601'
 dynamic_config: 1
@@ -17,7 +17,7 @@ name: Shell-Guess
 requires:
   perl: '5.006'
 resources:
-  bugtracker: https://github.com/plicease/shell-guess/issues
-  homepage: http://perl.wdlabs.com/Shell-Guess/
-  repository: git://github.com/plicease/shell-guess.git
-version: '0.04'
+  bugtracker: https://github.com/plicease/Shell-Guess/issues
+  homepage: http://perl.wdlabs.com/Shell-Guess
+  repository: git://github.com/plicease/Shell-Guess.git
+version: '0.05'
